Video Sequencer: F-curve insertion failure after un-meta #25932

Closed
opened 2011-02-04 02:15:36 +01:00 by david mcsween · 10 comments

%%%Fault: Cannot mix audio, as F-curve fails.

I have added movie strips to the (Master) timeline then cut and copy/pasted pieces into the correct order, from another (Source) scene's timeline.

One audio clip, the first one to have an F-Curve applied, will attenuate correctly. But subsequent F-Curves are not applied when inserting a keyframe in the Strip properties window.
They get an error;
"Could not Insert keyframe, as RNA path is invalid for the given ID..." see attached jpeg.

B2.56a Trunk r34541
win XP
ser pk 3

intel xeon CPU 5140@2.33Ghz
3GB ram%%%

%%%Fault: Cannot mix audio, as F-curve fails. I have added movie strips to the (Master) timeline then cut and copy/pasted pieces into the correct order, from another (Source) scene's timeline. One audio clip, the first one to have an F-Curve applied, will attenuate correctly. But subsequent F-Curves are not applied when inserting a keyframe in the Strip properties window. They get an error; "Could not Insert keyframe, as RNA path is invalid for the given ID..." see attached jpeg. B2.56a Trunk r34541 win XP ser pk 3 intel xeon CPU 5140@2.33Ghz 3GB ram%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The error should have been caused by the copy/paste then. How did you precisely do this?%%%

%%%The error should have been caused by the copy/paste then. How did you precisely do this?%%%
Author

%%%I am performing an edit based on these instructions
http://blendervse.wordpress.com/2010/10/20/vse-an-editors-layout/

I make a .blend with multiple scenes.

  1. Master edit scene
    2-n. Camera shot scenes

I cut (K-key) the desired portion of a camera strip from the "Camera shot scenes", then copy that portion to the clip board.

Then I goto the "Master edit scene" and Paste that portion of the Camera strip onto the timeline.

Then I try to keyframe the volume/attenuation.

Both shots were pasted in this way but only one failed (the one on the right).

%%%

%%%I am performing an edit based on these instructions http://blendervse.wordpress.com/2010/10/20/vse-an-editors-layout/ I make a .blend with multiple scenes. 1. Master edit scene 2-n. Camera shot scenes I cut (K-key) the desired portion of a camera strip from the "Camera shot scenes", then copy that portion to the clip board. Then I goto the "Master edit scene" and Paste that portion of the Camera strip onto the timeline. Then I try to keyframe the volume/attenuation. Both shots were pasted in this way but only one failed (the one on the right). %%%
Member

%%%David: you say "cut a camera strip" that means "cut an audio strip in the camera shot scene" right?

How does this relate to the .blend file you attached? If add a new scene there, and copy the cut audio strip from first to new scene, the copy went fine (without the animations though).%%%

%%%David: you say "cut a camera strip" that means "cut an audio strip in the camera shot scene" right? How does this relate to the .blend file you attached? If add a new scene there, and copy the cut audio strip from first to new scene, the copy went fine (without the animations though).%%%
Author

%%%yes I meant the audio strip that was imported with the video (camera) strip.
After reading this I tried adding f-curve in other scenes strips and they did work.

I then copied/pasted the faulty audio strip in the same scene and this made it work again.

The broken audio strip //XXEdit footage\Swap footage\MVI_3928.mov in the .blend won't acept any keyframes until copied and replaced.

It seems that it has been corrupted after I Meta the audio strip AND the associated video strip together (so they are locked in sync for moving on the timeline), then Un-Meta the strip.

after Un-meta-ing the strip I have that error when inserting a keyframe.%%%

%%%yes I meant the audio strip that was imported with the video (camera) strip. After reading this I tried adding f-curve in other scenes strips and they did work. I then copied/pasted the faulty audio strip in the same scene and this made it work again. The broken audio strip //XXEdit footage\Swap footage\MVI_3928.mov in the .blend won't acept any keyframes until copied and replaced. It seems that it has been corrupted after I Meta the audio strip AND the associated video strip together (so they are locked in sync for moving on the timeline), then Un-Meta the strip. after Un-meta-ing the strip I have that error when inserting a keyframe.%%%
Member

%%%Changed report title, maybe we attract someone to fix it then. :)%%%

%%%Changed report title, maybe we attract someone to fix it then. :)%%%
Author

%%%Possibly related Fault:

Using Blender 2.56.2 SVN r35375 I have recently noticed that audio becomes MUTE after performing a copy->paste of an audio strip.

When cached the waveform remains, and the original strip will play ok. But the copy (even in the same scene/timeline) will not playback audio.

It can be restored by "Save/close/re-opening" the .blend.

F-curve Bug workaround:

I have found that if I add a keyframe(KF) to each strip (just one dummy KF) in the "Source Scene timeline", the keyframes will work once the strip is copied into the "Master Scene timeline".%%%

%%%Possibly related Fault: Using Blender 2.56.2 SVN r35375 I have recently noticed that audio becomes MUTE after performing a copy->paste of an audio strip. When cached the waveform remains, and the original strip will play ok. But the copy (even in the same scene/timeline) will not playback audio. It can be restored by "Save/close/re-opening" the .blend. F-curve Bug workaround: I have found that if I add a keyframe(KF) to each strip (just one dummy KF) in the "Source Scene timeline", the keyframes will work once the strip is copied into the "Master Scene timeline".%%%
Member

%%%This was a very good bug, thanks for the report! The problem was that copy/paste of meta strips didn't create scene wide unique names for the copied/pasted strips, so when the strips were pasted they had the same name. This created a problem as f-curves use the strip names to identify which strip they belong to, so having non-unique names resulted in non-keyable strips.

I committed a fix in r35778, so this problem shouldn't happen anymore. This won't fix the example blend directly as the names have already been set as identical, but you can make the strips keyable by simply renaming the strips manually so that each strip has a unique name.

If you still experience the other bug you mentioned after this fix please open a new report for that!%%%

%%%This was a very good bug, thanks for the report! The problem was that copy/paste of meta strips didn't create scene wide unique names for the copied/pasted strips, so when the strips were pasted they had the same name. This created a problem as f-curves use the strip names to identify which strip they belong to, so having non-unique names resulted in non-keyable strips. I committed a fix in r35778, so this problem shouldn't happen anymore. This won't fix the example blend directly as the names have already been set as identical, but you can make the strips keyable by simply renaming the strips manually so that each strip has a unique name. If you still experience the other bug you mentioned after this fix please open a new report for that!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%This fault occurred again in a recent build.
That is an overlap between 2 trimmed meta strips (that have audio in them) allowed bleed through from the next strip.

So when strip 1 is playing, strip 2 begins early. Even with audio keyframes that should make strip 2 quiet.

win 32bit r41259
%%%

%%%This fault occurred again in a recent build. That is an overlap between 2 trimmed meta strips (that have audio in them) allowed bleed through from the next strip. So when strip 1 is playing, strip 2 begins early. Even with audio keyframes that should make strip 2 quiet. win 32bit r41259 %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25932
No description provided.