Fix for [#25932] Video Sequencer: F-curve insertion failure after un-meta * Copying/pasting sequence strips didn't properly check for unique names between the copied/pasted strips, so the rna paths of copypasted strips couldn't always be checked properly.